Fixing alignment AND reordering playbook list icons

--- a/src/components/ButtonGroup/buttonGroup.css
+++ b/src/components/ButtonGroup/buttonGroup.css
@@ -1,7 +1,7 @@
 .buttonGroup {
   display: flex;
   flex-direction: row;
-  align-items: baseline;
+  align-items: middle;
 
   .btn {
     margin-left: 5px;
